[gd_scene load_steps=23 format=3 uid="uid://dio8vufs33gs3"]

[ext_resource type="Script" path="res://Environment/Frog.gd" id="1_r1m5w"]
[ext_resource type="Texture2D" uid="uid://bsunusadgoihr" path="res://AssetsPack/Sunny-land-files/Sunny-land-assets-files/PNG/spritesheets/enemy-deadth.png" id="2_1phof"]
[ext_resource type="Texture2D" uid="uid://48ddc7s6tvmi" path="res://AssetsPack/Sunny-land-files/Sunny-land-assets-files/PNG/spritesheets/frog-idle.png" id="3_l5ltl"]
[ext_resource type="Texture2D" uid="uid://d2vpc2oq10u04" path="res://AssetsPack/Sunny-land-files/Sunny-land-assets-files/PNG/spritesheets/frog-jump.png" id="4_h352h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_10h6p"]
size = Vector2(23, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bvvj"]
atlas = ExtResource("2_1phof")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_phuyt"]
atlas = ExtResource("2_1phof")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4u52"]
atlas = ExtResource("2_1phof")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6ty6"]
atlas = ExtResource("2_1phof")
region = Rect2(120, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvsfv"]
atlas = ExtResource("2_1phof")
region = Rect2(160, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcwyw"]
atlas = ExtResource("2_1phof")
region = Rect2(200, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_85bfj"]
atlas = ExtResource("3_l5ltl")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fk1pp"]
atlas = ExtResource("3_l5ltl")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7l7p"]
atlas = ExtResource("3_l5ltl")
region = Rect2(70, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yyv3"]
atlas = ExtResource("3_l5ltl")
region = Rect2(105, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pywsa"]
atlas = ExtResource("4_h352h")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hi84"]
atlas = ExtResource("4_h352h")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ae3x2"]
atlas = ExtResource("4_h352h")
region = Rect2(70, 0, 35, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_nvkm2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bvvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phuyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4u52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6ty6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvsfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcwyw")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_85bfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fk1pp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7l7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yyv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85bfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85bfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85bfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85bfj")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pywsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hi84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ae3x2")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_e3820"]
radius = 186.325

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jphe8"]
size = Vector2(14, 18.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ukev"]
size = Vector2(27, 8.5)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_r1m5w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, -5)
shape = SubResource("RectangleShape2D_10h6p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -11)
sprite_frames = SubResource("SpriteFrames_nvkm2")
animation = &"Idle"
autoplay = "Idle"

[node name="PlayerDetectionArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
shape = SubResource("CircleShape2D_e3820")

[node name="FrogDeathArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FrogDeathArea"]
position = Vector2(1, -9.75)
shape = SubResource("RectangleShape2D_jphe8")

[node name="PlayerHurtArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHurtArea"]
position = Vector2(1.5, -4.75)
shape = SubResource("RectangleShape2D_3ukev")

[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_exited"]
[connection signal="body_entered" from="FrogDeathArea" to="." method="_on_player_detection_area_body_entered"]
[connection signal="body_entered" from="FrogDeathArea" to="." method="_on_frog_death_area_body_entered"]
[connection signal="body_exited" from="FrogDeathArea" to="." method="_on_player_detection_area_body_exited"]
[connection signal="body_entered" from="PlayerHurtArea" to="." method="_on_player_detection_area_body_entered"]
[connection signal="body_entered" from="PlayerHurtArea" to="." method="_on_frog_death_area_body_entered"]
[connection signal="body_entered" from="PlayerHurtArea" to="." method="_on_player_hurt_area_body_entered"]
[connection signal="body_exited" from="PlayerHurtArea" to="." method="_on_player_detection_area_body_exited"]
